--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "cos-js-sdk-v5": "^1.3.8",
     "element-ui": "^2.15.6",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
+    "qs": "^6.10.3",
+    "uuid": "^8.3.2",
     "vue": "^2.6.14",
+    "vue-print-nb": "^1.7.5",
     "vue-router": "^3.5.3",
     "vuex": "3.6.2"
   },
